--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing='2' border=''>
     <tr>
-      <td><img src="images/profile picture.jpg" alt="Darek profile picture"></td>
+      <td><img src="profile picture.jpg" alt="Darek profile picture"></td>
       <td>
         <h1> Darek Kubik</h1>
         <p><em>Founder of <strong>Empire Supplements</strong>.</em></p>
