--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     </tr>
   </table>
   <hr size='2' noshade>
-  <a href='hobbies.html'><strong>My Hobbies</strong></a>
+  <a href='Hobbies.html'><strong>My Hobbies</strong></a>
   <a href='Contact.html'><strong>Contact Me</strong></a>
 </body>
 
